# waymario

./: .gitignore  CLAUDE.md  README.md  flake.nix  pyproject.toml
.claude/skills/run-waymario/: SKILL.md
docs/superpowers/plans/: 2026-06-25-hsv-color-band-steering.md
docs/superpowers/specs/: 2026-06-25-hsv-color-band-steering-design.md  2026-06-25-waymario-autonomous-rainbow-road-design.md  2026-06-25-wrong-way-detection-design.md
firmware/: README.md
src/waymario/: __init__.py  capture.py  cli.py  config.py  control.py  daemon.py  drive.py  keyboard.py  steering.py  stream.py  stuck.py  transport.py
tests/: test_cli.py  test_control.py  test_daemon.py  test_drive.py  test_keyboard.py  test_steering.py  test_stuck.py  test_transport.py
